// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`create a function 1`] = `
Object {
  "root": Object {
    "children": Object {
      "my_function": Object {
        "attrs": Object {},
        "callees": Array [],
        "callers": Array [],
        "children": Object {},
        "dependsOn": Array [],
        "props": Object {
          "environmentVariables": Object {},
          "sourceCodeFile": "assets/my_function/index.js",
          "sourceCodeLanguage": "javascript",
        },
        "type": "wingsdk.cloud.Function",
      },
    },
    "dependsOn": Array [],
    "type": "constructs.Construct",
  },
  "startOrder": Array [
    "root/my_function",
  ],
}
`;

exports[`invoke function 1`] = `
Object {
  "root": Object {
    "children": Object {
      "my_function": Object {
        "attrs": Object {},
        "callees": Array [],
        "callers": Array [],
        "children": Object {},
        "dependsOn": Array [],
        "props": Object {
          "environmentVariables": Object {},
          "sourceCodeFile": "assets/my_function/index.js",
          "sourceCodeLanguage": "javascript",
        },
        "type": "wingsdk.cloud.Function",
      },
    },
    "dependsOn": Array [],
    "type": "constructs.Construct",
  },
  "startOrder": Array [
    "root/my_function",
  ],
}
`;

exports[`invoke function with environment variables 1`] = `
Object {
  "root": Object {
    "children": Object {
      "my_function": Object {
        "attrs": Object {},
        "callees": Array [],
        "callers": Array [],
        "children": Object {},
        "dependsOn": Array [],
        "props": Object {
          "environmentVariables": Object {
            "PIG_LATIN": "true",
          },
          "sourceCodeFile": "assets/my_function/index.js",
          "sourceCodeLanguage": "javascript",
        },
        "type": "wingsdk.cloud.Function",
      },
    },
    "dependsOn": Array [],
    "type": "constructs.Construct",
  },
  "startOrder": Array [
    "root/my_function",
  ],
}
`;
